# Agent-Evals

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  ci-thresholds.example.yaml  ds.json  pyproject.toml  reg.json
.github/workflows/: test.yml
agent_eval/: __init__.py  config.py
agent_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_eval/backends/: __init__.py  base.py  deepeval_backend.py  native_backend.py  ragas_backend.py
agent_eval/ci/: __init__.py  gate.py  thresholds.py
agent_eval/cli/: __init__.py  main.py
agent_eval/data/calibration_sets/: answer_quality.json  hallucination.json  intent_resolution.json  safety.json  tool_selection.json
agent_eval/dataset/: __init__.py  auto_generator.py  schema.py  trace_harvester.py  user_guide.py
agent_eval/dataset/templates/: general_agent.json  research_agent.json  search_agent.json  voice_agent.json
agent_eval/discovery/: __init__.py  graph_inspector.py  langsmith_inspector.py  mcp_inspector.py  memory_detector.py  registry.py
agent_eval/evaluators/: __init__.py  base.py  hallucination.py  memory.py  nli.py  output_quality.py  safety.py  system_performance.py  tool_performance.py  trajectory.py
agent_eval/judges/: __init__.py  base_judge.py  calibration.py  chain_of_thought_judge.py  rubric_judge.py
agent_eval/monitor/: __init__.py  alerting.py  online_evaluator.py  persistence.py
agent_eval/reporters/: __init__.py  html_reporter.py  json_reporter.py  regression_detector.py  report.py  tuning_advisor.py
agent_eval/runners/: __init__.py  base.py  http_runner.py  langgraph_runner.py  langsmith_replay.py  synthetic.py
docs/: integration_guide.md
eval_results/: report.json  report_20260501_001119.html  report_20260501_001119.regenerated.html
tests/: conftest.py  test_calibration.py  test_ci_gate.py  test_cli_extra.py  test_cli_smoke.py  test_constraint_parser.py  test_cot_trajectory.py  test_dataset.py  test_dataset_polish.py  test_discovery_deep.py  test_evaluate_with_runner.py  test_evaluators_offline.py  test_github_pr.py  test_graph_inspector.py  test_mcp_inspector.py  test_memory_full.py  test_nli_and_hallucination.py  test_per_example_report.py  test_persistence_and_alerts.py  test_registry.py  test_report_render.py  test_runners.py  test_structural_metrics.py  test_tuning_advisor.py
