[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval"
version = "1.0.0"
description = "Generic Agent System Evaluation Package — MCP discovery, structural metrics, DeepEval+Ragas backends, CI gate, memory eval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Trust" }]
keywords = ["agent", "evaluation", "llm", "langgraph", "langsmith", "mcp", "ragas", "deepeval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langsmith>=0.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "openai>=1.40",
    "pydantic>=2.7",
    "rich>=13.0",
    "click>=8.1",
    "jinja2>=3.1",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
embeddings = ["sentence-transformers>=3.0"]
deepeval = ["deepeval>=2.0"]
ragas = ["ragas>=0.2"]
memory = ["chromadb>=0.5", "mem0ai>=0.1"]
nli = ["transformers>=4.40", "torch>=2.2"]
ner = ["spacy>=3.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "respx>=0.21",
]
all = [
    "agent-eval[mcp,embeddings,deepeval,ragas,memory,nli,ner]",
]

[project.scripts]
agent-eval = "agent_eval.cli.main:cli"

[project.urls]
Homepage = "https://github.com/agent-trust/agent-eval"
Documentation = "https://github.com/agent-trust/agent-eval"
Issues = "https://github.com/agent-trust/agent-eval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_eval*"]

[tool.setuptools.package-data]
agent_eval = [
    "dataset/templates/*.json",
    "data/calibration_sets/*.json",
    "reporters/templates/*.html",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008"]
